Corrigiendo Deploy para ambos servidores

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,27 +1,14 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH_SITE1=/home/rodicomm/public_html/portal.rodi.com.mx/
-    - export DEPLOYPATH_SITE2=/home/rodicontrol/talentsafe.rodi-control.com/
-    - /bin/cp -R application $DEPLOYPATH_SITE1
-    - /bin/cp -R css $DEPLOYPATH_SITE1
-    - /bin/cp -R img $DEPLOYPATH_SITE1
-    - /bin/cp -R js $DEPLOYPATH_SITE1
-    - /bin/cp -R privacy_notice $DEPLOYPATH_SITE1
-    - /bin/cp -R scss $DEPLOYPATH_SITE1
-    - /bin/cp -R system $DEPLOYPATH_SITE1
-    - /bin/cp -R vendor $DEPLOYPATH_SITE1
-    - /bin/cp .htaccess $DEPLOYPATH_SITE1
-    - /bin/cp index.php $DEPLOYPATH_SITE1
-    # Copiar los mismos archivos al sitio 2
-    - /bin/cp -R application $DEPLOYPATH_SITE2
-    - /bin/cp -R css $DEPLOYPATH_SITE2
-    - /bin/cp -R img $DEPLOYPATH_SITE2
-    - /bin/cp -R js $DEPLOYPATH_SITE2
-    - /bin/cp -R privacy_notice $DEPLOYPATH_SITE2
-    - /bin/cp -R scss $DEPLOYPATH_SITE2
-    - /bin/cp -R system $DEPLOYPATH_SITE2
-    - /bin/cp -R vendor $DEPLOYPATH_SITE2
-    - /bin/cp .htaccess $DEPLOYPATH_SITE2
-    - /bin/cp index.php $DEPLOYPATH_SITE2
-        
+    - export DEPLOYPATH=/home/rodicomm/public_html/portal.rodi.com.mx/
+    - /bin/cp -R application $DEPLOYPATH
+    - /bin/cp -R css $DEPLOYPATH
+    - /bin/cp -R img $DEPLOYPATH
+    - /bin/cp -R js $DEPLOYPATH
+    - /bin/cp -R privacy_notice $DEPLOYPATH
+    - /bin/cp -R scss $DEPLOYPATH
+    - /bin/cp -R system $DEPLOYPATH
+    - /bin/cp -R vendor $DEPLOYPATH
+    - /bin/cp .htaccess $DEPLOYPATH
+    - /bin/cp index.php $DEPLOYPATH
