actualizando git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /_estudios/
 /_beca/
 /_portal_files/
+/_qrconsult/
+/_examEmpleado/
+/_cursos/
+/_documentEmpleado/
+/_perfiEmpleado/
