subiendo  cpanel.yaml  a  dandbox  talent

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,6 +1,6 @@
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/rodicomm/public_html/portal.rodi.com.mx/
+    - export DEPLOYPATH=/home/rodicomm/public_html/sandboxtalentsafe/sandbox.talentsafecontrol.com/
     - /bin/cp -R application $DEPLOYPATH
     - /bin/cp -R css $DEPLOYPATH
     - /bin/cp -R img $DEPLOYPATH
