--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 		"mpdf/mpdf": "^8.2",
 		"phpoffice/phpspreadsheet": "^1.18",
     "pusher/pusher-php-server": "^7.2",
-		"brainfoolong/cryptojs-aes-php": "^2.1"
+		"brainfoolong/cryptojs-aes-php": "^2.1",
+		"firebase/php-jwt": "^6.11"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
