--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
+application/config/keys/*
 /_doping/
 /_adjuntos/
 /_clinico/
