actualizando git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,9 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /_psicometria/
 /_estudios/
 /_beca/
+/_img/
 /_portal_files/
+/_logosPortal/
 /_qrconsult/
 /_examEmpleado/
 /_cursos/
