actualizando git ignorex2

--- a/.gitignore
+++ b/.gitignore
@@ -24,19 +24,19 @@ user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
 /_doping/
-/_adjuntos/
-/_clinico/
-/_docs/
-/_facturasdoping/
-/_psicometria/
-/_estudios/
-/_beca/
-/_img/
-/_portal_files/
-/_logosPortal/
-/_qrconsult/
-/_examEmpleado/
-/_cursos/
-/_documentEmpleado/
-/_perfiEmpleado/
-/_evaluacionesPortal/git status 
+/_adjuntos/*
+/_clinico/*
+/_docs/*
+/_facturasdoping/*
+/_psicometria/*
+/_estudios/*
+/_beca/*
+/_img/*
+/_portal_files/*
+/_logosPortal/*
+/_qrconsult/*
+/_examEmpleado/*
+/_cursos/*
+/_documentEmpleado/*
+/_perfiEmpleado/*
+/_evaluacionesPortal/*
