cambios  para registro y actualizacion de usuarios  internos && tambien cambio de nombre  a requisiciones  Express  a Internas  igual en bd

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /_estudios/*
 /_beca/*
 /_img/*
+/_logosPortal/*
 /_portal_files/*
 /_logosPortal/*
 /_qrconsult/*
