Dejar de rastrear la carpeta _const

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
 /_doping/
+/_const/
 /_adjuntos/*
 /_clinico/*
 /_docs/*
