--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /_examEmpleado/*
 /_cursos/*
 /_documentEmpleado/*
+/_perfiEmpleado/*
+
 /_documentosBolsa/*
 /_perfiEmpleado/*
 /_evaluacionesPortal/*
