--- a/.gitignore
+++ b/.gitignore
@@ -41,10 +41,9 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 /_examEmpleado/*
 /_cursos/*
 /_documentEmpleado/*
-/_perfiEmpleado/*
+/_perfilEmpleado/*
 
 /_documentosBolsa/*
-/_perfiEmpleado/*
 /_evaluacionesPortal/*
 /_recordatorios/*
 /_archivo_calendario/*
