--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ application/config/database.php
 application/config/keys/*
 .htaccess
 cpanel.yml
-
+application/config/email_private.php
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
